@@ -2,7 +2,7 @@ BUGS/UNTESTED STUFF:
   *.
 
 TECH TODO:
-   *. navigation course system.
+   *. navigation course system testing.
    *. make inertia battery that alter ships inertia overall for dir change 
       (Kinetic Energy (inertia) KE=0.5*mass*velocity*velocity)
       discharge of all stored inertial power to stop the ship entirely
