@@ -381,12 +381,11 @@ saveaci saveele savepoi saveund savemag savedis savetra \n\r\
 ability (magical level), armor, attacks (prowess), damage (max), \
 disposition (see AHELP ADJDISPOSITION), level, rejuv(!NO!), \
 senses (see AHELP ADJSENSES), speed (#attacks), RONDEATH (t/f),\
-height, weight, gender, class, clstart, race, hitpoints, hunger (stomach size), \
+height, weight, ambiance, gender, class, clstart, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size) doubt faith weightadj saveblunt \
 savepierce saveslash savespells saveprayers savesongs savechants rejuvrate \
 critpctweapons critpctmagic critdmgweapons critdmgmagic faith rejuvrate xpadjpct.  \
-Ableprofs and \
-ablelvls is a commma-delimited list of ablityids followed by a number \
+Ableprofs and ablelvls is a commma-delimited list of ablityids followed by a number \
 in parenthesis to adjust proficiency or casting level by.\n\r\
 \n\r\
 By default, the values + or - are added to the existing values.  However, if \
@@ -638,7 +637,7 @@ saveaci saveele savepoi saveund savemag savedis savetra \n\r\
 ability (magical level), armor, attacks (prowess), damage (max), \
 disposition (sitting/standing/flying/etc), level, rejuv(!NO!), \
 senses (blind/infravision/darkvision/etc), speed (#attacks), \
-height, weight, gender, class, race, hitpoints, hunger (stomach size), \
+height, weight, ambiance, gender, class, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size) conversion weightadj saveblunt \
 savepierce saveslash savespells saveprayers savesongs savechants \
 critpctweapons critpctmagic critdmgweapons critdmgmagic faith rejuvrate xpadjpct, experience, practices \
@@ -746,7 +745,7 @@ saveaci saveele savepoi saveund savemag savedis savetra \n\r\
 ability (magical level), armor, attacks (prowess), damage (max), \
 disposition (see AHELP ADJDISPOSITION), level, rejuv(!NO!), \
 senses (see AHELP ADJSENSES), speed (#attacks), \
-height, weight, gender, class, race, hitpoints, hunger (stomach size), \
+height, weight, ambiance, gender, class, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size) conversion weightadj saveblunt \
 savepierce saveslash savespells saveprayers savesongs savechants \
 critpctweapons critpctmagic critdmgweapons critdmgmagic faith rejuvrate xpadjpct. Ableprofs and \
@@ -872,7 +871,7 @@ saveaci saveele savepoi saveund savemag savedis savetra \n\r\
 ability (magical level), armor, attacks (prowess), damage (max), \
 disposition (see AHELP ADJDISPOSITION), level, rejuv(!NO!), \
 senses (as AHELP ADJSENSES), speed (#attacks), \
-height, weight, gender, class, race, hitpoints, hunger (stomach size), \
+height, weight, ambiance, gender, class, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size) conversion weightadj saveblunt \
 savepierce saveslash savespells saveprayers savesongs savechants \
 critpctweapons critpctmagic critdmgweapons critdmgmagic faith rejuvrate xpadjpct. Ableprofs and \
@@ -2521,7 +2520,7 @@ saveaci saveele savepoi saveund savemag savedis savetra \n\r\
 ability (magical level), armor, attacks (prowess), damage (max), \
 disposition (see AHELP ADJDISPOSITION), level, rejuv(!NO!), \
 senses (see AHELP ADJSENSES), speed (#attacks), \
-height, weight, gender, class, race, hitpoints, hunger (stomach size), \
+height, weight, ambiance, gender, class, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size) conversion weightadj saveblunt \
 savepierce saveslash savespells saveprayers savesongs savechants \
 critpctweapons critpctmagic critdmgweapons critdmgmagic faith rejuvrate xpadjpct. Ableprofs and \
