@@ -32,6 +32,7 @@
  31. New skill: Stoicism
  32. Pregnant people now get food addictions, and Addictions can now include resource name
  33. Amputation now works on corpses.
+ 34. Prop_*Adjusters now support ambiance+- arguments.
 
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
